cabal-version: 2.2

name:                houseman
version:             0.1.0
synopsis:            A Haskell implementation of Foreman
homepage:            https://github.com/fujimura/houseman#readme
bug-reports:         https://github.com/fujimura/houseman/issues
license:             MIT
license-file:        LICENSE
maintainer:          Daisuke Fujimura <me@fujmuradaisuke.com>
category:            Development
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/fujimura/houseman

common shared
  default-language: Haskell2010
  other-modules:
      Paths_houseman
  build-depends:
     base >=4.7 && <5,
      bytestring                    >= 0.10.10 && < 0.11,
      directory                     >= 1.3.6 && < 1.4,
      time                          >= 1.9.3 && < 1.10,
      unix                          >= 2.7.2 && < 2.8,
      dotenv                        >= 0.8.0 && < 0.9,
      mtl                           >= 2.2.2 && < 2.3,
      text                          >= 1.2.4 && < 1.3,
      process                       >= 1.6.8 && < 1.7,
      io-streams                    >= 1.5.2 && < 1.6,
      optparse-generic              >= 1.4.5 && < 1.5,
      parsers                       >= 0.12.10 && < 0.13,
      streaming-commons             >= 0.2.2 && < 0.3,
      trifecta                      >= 2.1.1 && < 2.2

library
  import: shared
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
      Houseman
      Houseman.Internal
      Houseman.Logger
      Houseman.Types
      Procfile.Parse
      Procfile.Types

executable houseman
  import: shared
  main-is: Main.hs
  hs-source-dirs: app src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
      Houseman
      Houseman.Internal
      Houseman.Logger
      Houseman.Types
      Procfile.Parse
      Procfile.Types

test-suite spec
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
      src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , hspec ==2.*
    , interpolate
    , mockery >=0.3
    , silently
    , temporary
  build-tool-depends: hspec-discover:hspec-discover -any
  other-modules:
      HousemanSpec
      Procfile.ParseSpec
      Houseman
      Houseman.Internal
      Houseman.Logger
      Houseman.Types
      Procfile.Parse
      Procfile.Types
      Paths_houseman
  default-language: Haskell2010
